<resources>
    <string name="app_name">uBurn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_measurement">New Measure</string>
    <string name="title_goals">Goals</string>
    <string name="title_settings">Settings</string>
    <string name="title_splash">Splash</string>
    <string name="title_description">We track your metrics</string>
    <string name="title_description2">and you burn the calories</string>
    <string name="pick_time">**/**/**</string>
    <string name="pick_weight"> *** lbs</string>
</resources>