<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_measurement"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_measurement" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_baseline_date_range_24"
        android:title="@string/title_goals" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>