<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#083d77"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_marginTop="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="96dp" />

    <TextView
        android:id="@+id/title_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_description"
        android:textColor="#f95738"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/title_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_description2"
        android:textColor="#f95738"
        android:textSize="24dp" />

    <ImageView
        android:layout_width="174dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/flame" />


</LinearLayout>